Issue #838 fixing z-index problem.

--- a/themes/custom/ts_wrin/sass/components/_search-archive.scss
+++ b/themes/custom/ts_wrin/sass/components/_search-archive.scss
@@ -323,6 +323,7 @@
 .experts-container .view-header {
   @include mq($lg) {
     margin-top: -98px;
+    margin-right: 230px;
   }
 }
 .view-events .view-header {
